--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1375,6 +1375,11 @@ h5 small {
 		}
 	}
 
+	&__info {
+		display: inline-block;
+		margin-bottom: 10px;
+	}
+
 	&__item {
 		display: flex;
 		align-items: center;
