--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1033,6 +1033,10 @@ h5 small {
 		color: brown;
 		font-weight: bold;
 	}
+
+	& .playlist__item__active-host {
+		font-size: 25px;
+	}
 }
 
 .songs__list-item {
@@ -1757,10 +1761,15 @@ h5 small {
 		margin-bottom: 10px;
 	}
 
-	&__item {
+	&__item-wrapper {
 		display: flex;
 		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__item {
 		position: relative;
+		list-style: none;
 
 		&::before {
 			content: '';
@@ -1770,6 +1779,8 @@ h5 small {
 			left: 0;
 			border-radius: 100%;
 			background-color: $color-01;
+			top: 50%;
+			transform: translate3d(0, -50%, 0);
 		}
 
 		&__avt {
@@ -1787,10 +1798,10 @@ h5 small {
 			display: flex;
 			flex-flow: wrap;
 			width: 100%;
+			align-items: center;
 		}
 
 		&__name {
-			width: 60%;
 			margin-bottom: 0;
 			margin-right: 10px;
 			margin-left: 6px;
@@ -1815,18 +1826,25 @@ h5 small {
 
 		&__host-icon-wrapper {
 			position: absolute;
-			bottom: 0;
-			right: 0;
-			box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.75);
+			right: 100%;
+			align-items: center;
 			display: flex;
-			background-color: white;
-			border-radius: 50%;
-			padding: 2px;
+			width: 20px;
+			height: 20px;
+			top: 50%;
+			transform: translate3d(0, -50%, 0);
+		}
+
+		&__image-and-name {
+			display: flex;
+			flex-basis: 60%;
 		}
 
 		&__payment {
-			width: 60%;
-			margin-left: 20px;
+			// width: 60%;
+			display: flex;
+			justify-content: flex-end;
+			// margin-left: 20px;
 
 			form {
 				margin-bottom: 0;
@@ -1858,6 +1876,16 @@ h5 small {
 				&:hover {
 					border-color: #a65e09;
 					background-color: #a65e09;
+				}
+			}
+
+			& input[type=button],
+			& input[type=submit],
+			& input[type=number] {
+				margin: 0 4px;
+
+				&:last-child {
+					margin-right: 0;
 				}
 			}
 		}
