--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1946,14 +1946,14 @@ h5 small {
 			// top: $tabnav-h + 30px;
 		}
 
-		&__title {
-			span {
-			}
-		}
+		// &__title {
+		// 	span {
+		// 	}
+		// }
 
-		&__info {
+		// &__info {
 
-		}
+		// }
 
 		&__item-wrapper {
 			flex-wrap: nowrap;
@@ -1962,7 +1962,6 @@ h5 small {
 		}
 
 		&__item {
-
 			&__info {
 				width: 100%;
 			}
@@ -2177,6 +2176,37 @@ button.button-naucoin {
 
 	&__create-button {
 		margin-left: 20px;
+	}
+}
+
+.toaster {
+	position: fixed;
+	bottom: -100px;
+	left: 50%;
+	transform: translate3d(-50%, 0, 0);
+	transition: transform 1s ease;
+	padding: 10px 20px;
+	max-width: 100vw;
+	cursor: pointer;
+
+	&--open {
+		transform: translate3d(-50%, -110px, 0);
+	}
+
+	&--success {
+		background-color: #51a351;
+		color: $color-01;
+	}
+
+	&--error {
+		background-color: #e74c3c;
+		color: $color-01;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.toaster {
+		max-width: 600px;
 	}
 }
 
