--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -988,9 +988,9 @@ h5 small {
 		&__list-item {
 			text-align: left;
 
-			&:first-child {
-				padding-left: 0;
-			}
+			// &:first-child {
+			// 	padding-left: 0;
+			// }
 
 			&:hover {
 				background-color: #f5f5f5;
@@ -1103,7 +1103,7 @@ h5 small {
 		align-items: center;
 
 		& span {
-			padding: 0 7px;
+			padding: 2px 10px;
 
 			&:first-child {
 				padding-left: 0;
@@ -1865,7 +1865,7 @@ h5 small {
 		z-index: 1;
 		background-color: $color-01;
 		border: 1px solid rgba($color-01, 0.2);
-		padding: 25px 10px 10px 10px;
+		padding: 45px 10px 10px 10px;
 		top: 50%;
 		right: 50%;
 		transform: translate3d(50%, -50%, 0);
@@ -1879,7 +1879,7 @@ h5 small {
 			position: absolute;
 			right: 0;
 			top: 0;
-			padding: 5px;
+			padding: 15px;
 		}
 	}
 }
