Add Badge for currentUser, autofocus when user open popup form, fix search click when user click in search form, fix alert when host click on host checkbox, fix open popup when user click coin submit in desktop

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1995,6 +1995,11 @@ h5 small {
 		color: $color-01;
 		background-color: #28a745;
 	}
+
+	&.primary {
+		color: $color-01;
+		background-color: $color-nau;
+	}
 }
 
 // $btn-color: #A75265;
