add href below room name, add noselect to help user select href better, allow search songs cross room

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -736,13 +736,26 @@ h5 small {
 	transform: translateX(6px) scaleY(0.8);
 }
 
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
 .host {
 	position: absolute;
 	top: 20px;
 	left: 25px;
-	z-index: 1000;
-	cursor: pointer;
+	line-height: 1;
+	z-index: 10;
 	font-weight: 700;
+
+	small {
+		font-style: italic;
+	}
 }
 
 .host .dot {
