--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -752,6 +752,8 @@ h5 small {
 	line-height: 1;
 	z-index: 10;
 	font-weight: 700;
+	color: $color-01;
+	text-shadow: 1px 1px $color-05;
 
 	small {
 		font-style: italic;
