--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1060,7 +1060,6 @@ summary {
 .songs__list-item-wrapper {
 	position: relative;
 	list-style: none;
-	padding-bottom: 4px;
 	border-bottom: 1px solid #eee;
 	margin-bottom: 2.4rem;
 
@@ -1071,7 +1070,7 @@ summary {
 	}
 
 	& .playlist__item__active-host {
-		font-size: 25px;
+		font-size: 30px;
 	}
 }
 
@@ -1168,7 +1167,10 @@ summary {
 
 	&__author {
 		position: absolute;
-		right: 101%;
+		top: 50%;
+		right: 100%;
+		transform: translate3d(-50%, -50%, 0);
+		line-height: 1;
 		display: block;
 		white-space: nowrap;
 	}
@@ -1195,7 +1197,7 @@ summary {
 
 	.songs__list-item-wrapper {
 		border: none;
-		margin-bottom: 0;
+		margin-bottom: 4px;
 	}
 
 	.songs__list-item {
@@ -2234,7 +2236,7 @@ button.button-naucoin {
 	bottom: -100px;
 	left: 50%;
 	transform: translate3d(-50%, 0, 0);
-	transition: transform 1s ease;
+	transition: transform 0.4s ease;
 	padding: 10px 20px;
 	max-width: 100vw;
 	cursor: pointer;
