--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -298,7 +298,6 @@ summary {
 	}
 }
 
-// playbutton's animation was referenced by this pen http://codepen.io/tampham47/pen/wGoJqY
 //https://css-tricks.com/making-pure-css-playpause-button/
 .play-button {
 	position: absolute;
@@ -309,13 +308,14 @@ summary {
 	box-sizing: border-box;
 	width: 100%;
 	height: 100%;
-	border-color: transparent transparent transparent #202020;
+	border-color: transparent transparent transparent $color-01;
 	transition: 200ms all ease;
 	cursor: pointer;
 	border-style: solid;
 	border-width: 22px 0 22px 37px;
 	padding: 0;
-	border-radius: 3px;
+	border-radius: 0;
+	filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 
 	&--paused {
 		border-style: double;
@@ -324,7 +324,7 @@ summary {
 
 	&:focus,
 	&:hover {
-		border-color: transparent transparent transparent #404040;
+		border-color: transparent transparent transparent $color-02;
 	}
 }
 
@@ -742,7 +742,7 @@ summary {
 	z-index: 10;
 	font-weight: 700;
 	color: $color-01;
-	text-shadow: 1px 1px $color-05;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 
 	small {
 		font-style: italic;
